[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Quiz/Question.gd" type="Script" id=1]
[ext_resource path="res://Assets/Quiz/World/Window.png" type="Texture" id=2]
[ext_resource path="res://Assets/Quiz/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/Candy Beans.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Quiz/World/dialog_button.png" type="Texture" id=5]
[ext_resource path="res://Assets/Quiz/World/background.png" type="Texture" id=6]
[ext_resource path="res://Assets/Quiz/World/button-normal.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 45
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 4 )

[sub_resource type="StreamTexture" id=4]
flags = 4
load_path = "res://.import/left.png-1d8f5aff07d79c850e994d38fdaecfcb.stex"

[sub_resource type="DynamicFont" id=5]
size = 42
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=11]
radius = 75.1526
height = 33.1886

[node name="mainNode" type="Node2D"]
script = ExtResource( 1 )
questionTextPath = NodePath("QnText")
optionBtn1 = NodePath("OptionButton1")
optionBtn2 = NodePath("OptionButton2")
optionBtn3 = NodePath("OptionButton3")
optionBtn4 = NodePath("OptionButton4")
optionLabel1 = NodePath("OptionButton1/Option1Text")
optionLabel2 = NodePath("OptionButton2/Option2Text")
optionLabel3 = NodePath("OptionButton3/Option3Text")
optionLabel4 = NodePath("OptionButton4/Option4Text")
background = NodePath("Background")
popupDialog = NodePath("PopupLayer/DialogBackground")
popupLabel = NodePath("PopupLayer/DialogLabel")
popupLabelDesc = NodePath("PopupLayer/DialogDesc")
scoreLabel = NodePath("ScoreTxt/Score")
popupButton = NodePath("PopupLayer/DialogButton")
popupButtonTxt = NodePath("PopupLayer/DialogButton/DialogButtonLabel")
backButton = NodePath("Back")

[node name="PopupLayer" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = 2

[node name="DialogBackground" type="TextureButton" parent="PopupLayer"]
visible = false
margin_left = 32.0
margin_top = 278.0
margin_right = 592.0
margin_bottom = 885.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
expand = true

[node name="DialogLabel" type="Label" parent="PopupLayer"]
visible = false
margin_left = 117.0
margin_top = 374.0
margin_right = 517.0
margin_bottom = 521.0
custom_fonts/font = SubResource( 1 )
text = "CORRECT!"
align = 1
valign = 1
autowrap = true

[node name="DialogDesc" type="Label" parent="PopupLayer"]
visible = false
margin_left = 121.0
margin_top = 523.0
margin_right = 510.0
margin_bottom = 701.0
custom_fonts/font = SubResource( 2 )
align = 1
autowrap = true

[node name="DialogButton" type="TextureButton" parent="PopupLayer"]
editor/display_folded = true
visible = false
margin_left = 226.0
margin_top = 741.0
margin_right = 399.0
margin_bottom = 817.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
expand = true

[node name="DialogButtonLabel" type="Label" parent="PopupLayer/DialogButton"]
margin_left = 45.0
margin_top = 6.0
margin_right = 130.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 3 )
text = "Ok"
align = 1
valign = 1
autowrap = true

[node name="Background" type="TextureRect" parent="."]
margin_left = -264.489
margin_top = 5.48282
margin_right = 1349.52
margin_bottom = 1094.48
texture = ExtResource( 6 )
stretch_mode = 1

[node name="Back" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 20.0
margin_top = 900.0
margin_right = 100.0
margin_bottom = 980.0
texture_normal = SubResource( 4 )
expand = true

[node name="QnText" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 41.0
margin_right = 622.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Question"
align = 1
valign = 1
autowrap = true

[node name="ScoreTxt" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 955.0
margin_right = 347.0
margin_bottom = 1075.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "  Current Score:"
valign = 1
autowrap = true

[node name="Score" type="Label" parent="ScoreTxt"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -34.0
margin_top = -117.0
margin_right = 41.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "00"
align = 1
valign = 1
autowrap = true

[node name="OptionButton1" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 2.0
margin_top = 300.0
margin_right = 622.0
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
expand = true

[node name="Option1Text" type="Label" parent="OptionButton1"]
margin_right = 620.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1
autowrap = true

[node name="OptionButton2" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 2.0
margin_top = 450.0
margin_right = 622.0
margin_bottom = 570.0
texture_normal = ExtResource( 7 )
expand = true

[node name="Option2Text" type="Label" parent="OptionButton2"]
margin_right = 620.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1
autowrap = true

[node name="OptionButton3" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 2.0
margin_top = 600.0
margin_right = 622.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
expand = true

[node name="Option3Text" type="Label" parent="OptionButton3"]
margin_right = 620.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 8 )
align = 1
valign = 1
autowrap = true

[node name="OptionButton4" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 2.0
margin_top = 750.0
margin_right = 622.0
margin_bottom = 870.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
expand = true

[node name="Option4Text" type="Label" parent="OptionButton4"]
margin_right = 620.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 9 )
align = 1
valign = 1
autowrap = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Character" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 3.65002, 102.743 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Character"]
position = Vector2( 503.408, 865.947 )
scale = Vector2( 0.410224, 0.410225 )
frames = SubResource( 10 )
animation = ""
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character"]
position = Vector2( 506.164, 865.637 )
shape = SubResource( 11 )
[connection signal="pressed" from="PopupLayer/DialogButton" to="." method="_on_DialogButton_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="OptionButton1" to="." method="_on_OptionButton1_pressed"]
[connection signal="pressed" from="OptionButton2" to="." method="_on_OptionButton2_pressed"]
[connection signal="pressed" from="OptionButton3" to="." method="_on_OptionButton3_pressed"]
[connection signal="pressed" from="OptionButton4" to="." method="_on_OptionButton4_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
